syntax = "proto3";

package com.hl.netty._12grpcStreamBoth;

option java_package = "com.hl.netty._12grpcStreamBoth";
option java_outer_classname = "StudentProto";
option java_multiple_files=true;

service StudentService{
    rpc GetRealNameByUserName(MyRequest) returns (MyResponse) {}
    //grpc要求请求和响应都必须是message类型的 thrift和grpc的不同
    rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}

    rpc GetStudentsWrapperByAge(stream StudentRequest) returns (StudentResponseList) {}
    rpc ByTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message MyRequest {
     string username = 1;
}

message MyResponse {
     string realname = 2;
}

message StudentRequest{
    int32 age = 1;
}

message StudentResponse{
    string name =1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList{
    repeated StudentResponse studentResponse = 1;
}

message StreamRequest{
    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}


